# rust-GL

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cross.yml  ci-msrv.yml  ci.yml  coverage.yml  docs.yml  release.yml
benches/: layout.rs  rendering.rs  text.rs
examples/: counter.rs  demo.rs  hello.rs  japanese.rs  layout_demo.rs  othello_jp.rs  showcase.rs  styling.rs
scripts/: check.sh  screenshot.sh
src/: app.rs  canvas.rs  event.rs  focus.rs  keyboard.rs  layout.rs  lib.rs  main.rs  text.rs
src/widgets/: button.rs  checkbox.rs  container.rs  divider.rs  mod.rs  radio.rs  scroll.rs  slider.rs  spacer.rs  text.rs  text_input.rs
tests/: canvas_integration.rs  layout_integration.rs  test_utils.rs  text_safety.rs  text_wrapping.rs  widget_integration.rs
