[package]
name = "rust2d_ui"
version = "0.2.0"
edition = "2021"
description = "A pure-Rust 2D UI experiment – software rasteriser built on softbuffer"
license = "MIT"
repository = "https://github.com/harupipipipi/rust-GL"
homepage = "https://github.com/harupipipipi/rust-GL"
keywords = ["gui", "2d", "softbuffer", "ui", "widgets"]
categories = ["gui", "graphics", "rendering"]
rust-version = "1.65"

[[bin]]
name = "rust2d-demo"
path = "src/main.rs"

[dependencies]
winit = "0.29"
softbuffer = "0.4"
font-kit = "0.14"
fontdue = "0.9"
thiserror = "1"
unicode-normalization = "0.1"
